--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-    "engines": {
+  "engines": {
     "node": "18.x"
   },
   "dependencies": {
@@ -48,6 +48,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
+    "rollup": "^4.53.2",
     "shadcn-ui": "^0.9.5",
     "tailwindcss": "^3.4.10",
     "vite": "^7.2.2"
