--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=https://crm-backend-6aw1.onrender.com/
+# VITE_API_URL=https://crm-backend-6aw1.onrender.com/
+VITE_API_URL=https://api.eximinq.co.in/
