Added email in correct and Visit Scheduled

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # VITE_API_URL=https://crm-backend-6aw1.onrender.com/
 VITE_API_URL=https://api.eximinq.co.in/
+# VITE_API_URL"http://localhost:5000/",
